--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jest": "^23.1.1",
     "jest": "^24.9.0"
+  },
+  "dependencies": {
+    "acorn": "^7.1.1",
+    "minimalist": "^1.0.0"
   }
 }
